--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -8,7 +8,7 @@ import Skills from '../components/skills/Skills.astro';
 import Layout from '../layouts/Layout.astro';
 ---
 
-<Layout title="Jonas Batista | Front-end Developer">
+<Layout title="Jonas Batista | Desenvolvedor Front-end">
   <Header origin={mainMenu} />
   <main class="self-center w-full">
     <Hero />
